update various html elements and add additional where necessary to improve ease of styling. update css following mobile-first responsive design principles, meaning that we design for the smallest screen first, then move up to various larger screen sizes using css @media at-rules to adjust styling as necessary at different breakpoints.

--- a/details.css
+++ b/details.css
@@ -1,73 +1,164 @@
-#wrapper { background-color: lightskyblue; 
-           font-family: Arial;}
-#aboutme { text-align: center; 
-           margin-left: auto;
-           margin-right: auto;
-          }
+#wrapper {
+  background-color: lightskyblue;
+  font-family: Arial;
+}
+#aboutme {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-header { color:black;;
-         font-size: 50px;
-         text-align: center;
-         border-bottom: 20px solid white; /*-- A red solid border that is 20px wide --*/  
-         padding: 5px; /*-- The space between the text and border --*/
-         background-color: lightblue; /*-- The color of the background inside of the border. --*/
-         /*-- sets the space after the border. --*/
-        }
-
+header {
+  color: black;
+  text-align: center;
+  border-bottom: 20px solid white; /*-- A red solid border that is 20px wide --*/
+  padding: 5px; /*-- The space between the text and border --*/
+  background-color: lightblue; /*-- The color of the background inside of the border. --*/
+  /*-- sets the space after the border. --*/
+}
 
 /*-- The Navigation --*/
-nav { text-align: center;
-      padding: 2px;
-      margin: 0;
-    }
+nav {
+  text-align: center;
+  padding: 2px;
+  margin: 0;
+}
 
 /*-- The Ancher element. The link does not have an underline. --*/
-nav a { text-decoration: none;
-        color: black; }
+nav a {
+  text-decoration: none;
+  color: black;
+}
 
-nav li { list-style-type: none;
-        display: inline-block;
-        font-size: 20px;
-        padding: 20px;;
-        margin: 0;
-        outline: solid white;
-        background-color: lightblue;
-      }
+nav ul {
+  padding: 0;
+}
 
-#marginalign { background-color: lightblue;
-           margin-top: 0;
-           padding-bottom: 40px;
-           padding-top: 0;
-           border-top: 2px solid white;
-           border-bottom: 2px solid white;
-           height: 5px;
-           line-height: 0;
-         }
-h2 { margin-left: 150px;}
-h3 { background-color: white;
-     padding: 10px;
-     margin-right: 0px;
-     margin-left: 0px;}
-     
-body { margin-right: 100px;
-       margin-left: 100px;
-       background-color: white;
-       border: 10px solid gray;
-     }
+nav li {
+  list-style-type: none;
+  display: inline-block;
+  font-size: 20px;
+  padding: 20px;
+  margin: 0;
+  outline: solid white;
+  background-color: lightblue;
+}
 
-footer { border-top: 20px solid white;
-         background-color: lightblue; 
-         padding: 10px;
-         height: 50px;
-         text-align: center;
-        }
+.marginalign {
+  background-color: lightblue;
+  margin-top: 0;
+  padding-bottom: 40px;
+  padding-top: 0;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  height: 5px;
+  line-height: 0;
+}
 
-#exp1 { margin-left: 150px; margin-right: 150px;}
+.bio {
+  text-align: center;
+  margin: 1rem;
+}
 
-#me { border-radius: 50%;
-      display: block; 
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 10px;}
+.exp1 > div > p{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
 
-p {font-size: 12pt;}
+.exp1 > div > h4 {
+  margin-left: 1rem;
+}
+
+.center {
+  display: block;
+  text-align: center;
+}
+
+.excel {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+h3 {
+  background-color: white;
+  padding: 10px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+body {
+  background-color: white;
+  border: 10px solid gray;
+}
+
+footer {
+  border-top: 20px solid white;
+  background-color: lightblue;
+  padding: 10px;
+  height: 50px;
+  text-align: center;
+}
+
+#me {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 10px;
+}
+
+p {
+  font-size: 12pt;
+}
+
+@media screen and (min-width: 800px) {
+  body {
+    margin-right: 100px;
+    margin-left: 100px;
+    background-color: white;
+    border: 10px solid gray;
+  }
+
+  header {
+    font-size: 50px;
+  }
+
+  .bio {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
+  }
+
+  #me {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+
+@media screen and (min-width: 1400px) {
+  body {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+  }
+
+  .exp1 > div > p{
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+  
+  .exp1 > div > h4 {
+    margin-left: 2rem;
+  }
+
+  h3 {
+    padding-left: 1rem;
+  }
+}
